O HTML foi formulado em sua totalidade

--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
     <title>LOTERIA</title>
 </head>
 <body>
-    <h1>Loteria</h1>
-    <h3>Aposte na sua sorte</h3>
-    
+    <header>
+        <h1>Loteria</h1>
+        <h3>Aposte na sua sorte</h3>
+    </header>
+
+    <div class="numericos">
+        <input type="number" id="numerino 1">
+        <input type="number" id="numerino 2">
+        <input type="number" id="numerino 3">
+        <input type="number" id="numerino 4">
+        <input type="number" id="numerino 5">
+        <input type="number" id="numerino 6">
+    </div>
+
+    <div class="sorteamento">
+        <button class="btnsortino">Sortear</button>
+        <p id="numerico_sortudo"></p>
+    </div>
+
+    <div class="verificado">
+        <p>Total acertivo foi: <span id="totalidade"></span> </p>
+    </div>
+
 </body>
 </html>
