Função de Sorteio

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
     </div>
 
     <div class="sorteamento">
-        <button class="btnsortino">Sortear</button>
-        <p id="numerico_sortudo"></p>
+        <button class="btnsortino" onclick="sorteamentoNumerico()">Sortear</button>
+        <p id="numerico_sortudo">Numeros Sorteados:</p>
     </div>
 
     <div class="verificado">
         <p>Total acertivo foi: <span id="totalidade"></span> </p>
     </div>
+    <script src="funcionalidades.js">
 
+    </script>
 </body>
 </html>
