--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
 
     <div class="numericos">
-        <input type="number" id="numerino 1">
-        <input type="number" id="numerino 2">
-        <input type="number" id="numerino 3">
-        <input type="number" id="numerino 4">
-        <input type="number" id="numerino 5">
-        <input type="number" id="numerino 6">
+        <input type="number" id="numerino 1" onchange="catadorDeNumeros(value,1)">
+        <input type="number" id="numerino 2" onchange="catadorDeNumeros(value,2)">
+        <input type="number" id="numerino 3" onchange="catadorDeNumeros(value,3)">
+        <input type="number" id="numerino 4" onchange="catadorDeNumeros(value,4)">
+        <input type="number" id="numerino 5" onchange="catadorDeNumeros(value,5)">
+        <input type="number" id="numerino 6" onchange="catadorDeNumeros(value,6)">
     </div>
 
     <div class="sorteamento">
